--- a/exo_events.html
+++ b/exo_events.html
@@ -156,7 +156,7 @@
     </div>
   </main>
 
-  <footer class="text-muted">
+  <footer id='test' class="text-muted">
     <div class="container">
       <p class="float-right">
         <a href="#">Back to top</a>
